--- a/index.html
+++ b/index.html
@@ -17,11 +17,17 @@
 </head>
 
 <body>
-    <header>
+    <!-- <header>
         <h2>Canvas Flow</h2>
-    </header>
+    </header> -->
     <div class="wrapper">
         <div class="col">
+            <!-- <button style="align-self:flex-end">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                    stroke="currentColor" style="width:20px;align-self:flex-end">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M10.5 19.5 3 12m0 0 7.5-7.5M3 12h18" />
+                </svg>
+            </button> -->
             <!-- <div class="drag-drawflow" draggable="true" ondragstart="drag(event)" data-node="dbclick">
                 <i class="fas fa-mouse"></i><span>EMAIL READER</span>
             </div> -->
@@ -177,7 +183,8 @@
                     },
                     {
                         name: "Type",
-                        type: "text"
+                        type: "select",
+                        items: ["File", "Directory", "Image"]
                     },
                     {
                         name: "Skill",
@@ -448,11 +455,7 @@
                             const element = obj[x][index];
                             if (element && typeof element === 'object' && element.constructor === Object) {
                                 Object.keys(element).forEach((e) => {
-                                    let _type = _design.find((d) => d.name == e)?.type
-                                    if ([null, undefined, "text"].includes(_type))
-                                        _te += `<div class="sp"><Label>${e}</Label><input type="text" name=${e} data-id="${id}" data-objname="${x}" data-rowindex="${index}" value="${element[e]}"/></div>`
-                                    else if (_type == "textarea")
-                                        _te += `<div class="sp"><Label>${e}</Label><textarea rows="4" name=${e} data-id="${id}" data-objname="${x}" data-rowindex="${index}">${element[e]}</textarea></div>`
+                                    _template += uitag(id, e, x, index, element[e], _design.find((d) => d.name == e))
                                 })
                                 //Add delete button
                                 _te += `<button type="button" name="delete" data-id="${id}" data-objname="${x}" data-rowindex="${index}" onclick="buttonDeleteClick(event)">Delete</button>`
@@ -460,11 +463,7 @@
                                 _te = ''
                             }
                             else {
-                                let _type = _design.find((d) => d.name == x)?.type
-                                if ([null, undefined, "text"].includes(_type))
-                                    _te += `<div class="sp"><input type="text" name="index" data-id="${id}" data-objname="${x}" data-rowindex="${index}" value="${element}"/></div>`
-                                else if (_type == "textarea")
-                                    _te += `<div class="sp"><textarea rows="4" name="index" data-id="${id}" data-objname="${x}" data-rowindex="${index}">${element}</textarea></div>`
+                                _template += uitag(id, index, x, index, element, _design.find((d) => d.name == x))
                                 _te += `<button type="button" name="delete" data-id="${id}" data-objname="${x}" data-rowindex="${index}" onclick="buttonDeleteClick(event)">Delete</button>`
                                 // _template += `<fieldset class="fs">${_te}</fieldset>`
                                 _template += `${_te}`
@@ -477,11 +476,7 @@
                 else if (_keys[x] && typeof _keys[x] === 'object' && _keys[x].constructor === Object) { }
                 else {
                     model[x] = obj ? obj[x] : ''
-                    let _type = _design.find((d) => d.name == x)?.type
-                                if ([null, undefined, "text"].includes(_type))
-                    _template += `<div class="sp"><Label>${x}</Label><input type="text" name=${x} data-id="${id}" data-objname="${x}" data-rowindex="0" value="${obj ? obj[x] : ''}"/></div>`
-                    else if (_type == "textarea")
-                    _template += `<div class="sp"><Label>${x}</Label><textarea rows="4" name=${x} data-id="${id}" data-objname="${x}" data-rowindex="0">${obj ? obj[x] : ''}</textarea></div>`
+                    _template += uitag(id, x, x, 0, model[x], _design.find((d) => d.name == x))
                 }
             })
 
@@ -557,6 +552,39 @@
             },
             false
         );
+    }
+
+    function uitag(id, name, objname, rowindex, value, designobj) {
+        if (designobj) {
+            switch (designobj?.type) {
+                case null:
+                case undefined:
+                case "text":
+                    return inputtext(id, name, objname, rowindex, value, designobj)
+                case "textarea":
+                    return inputtextarea(id, name, objname, rowindex, value, designobj)
+                case "select":
+                    return inputselect(id, name, objname, rowindex, value, designobj)
+            }
+        }
+    }
+
+    function inputtext(id, name, objname, rowindex, value, designobj) {
+        return `<div class="sp"><Label>${name}</Label><input type="text" name=${name} data-id="${id}" data-objname="${objname}" data-rowindex="${rowindex}" value="${value}"/></div>`
+    }
+    function inputtextarea(id, name, objname, rowindex, value, designobj) {
+        return `<div class="sp"><Label>${name}</Label><textarea rows="4" name=${name} data-id="${id}" data-objname="${objname}" data-rowindex="${rowindex}">${value}</textarea></div>`
+    }
+    function inputselect(id, name, objname, rowindex, value, designobj) {
+        let _out = `<div class="sp"><Label>${name}</Label><select name=${name} data-id="${id}" data-objname="${objname}" data-rowindex="${rowindex}">`
+        for (let i = 0; i < designobj.items.length; i++) {
+            if (value == designobj.items[i])
+                _out += `<option value="${designobj.items[i]}" selected>${designobj.items[i]}</option>`
+            else
+                _out += `<option value="${designobj.items[i]}">${designobj.items[i]}</option>`
+        }
+        _out += `</select></div>`
+        return _out
     }
 </script>
 
